--- a/react-dashboard/package.json
+++ b/react-dashboard/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.2.1",
+    "@material-ui/icons": "^4.2.1",
     "grommet": "^2.6.5",
     "grommet-icons": "^4.2.0",
+    "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "react-scripts": "2.1.8",
     "react-time-picker": "^3.5.1",
+    "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
     "styled-components": "^4.2.0"
   },
   "scripts": {
