--- a/react-dashboard/package.json
+++ b/react-dashboard/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^7.1.0",
     "react-scripts": "2.1.8",
     "react-time-picker": "^3.5.1",
+    "redux": "^4.0.4",
     "styled-components": "^4.2.0"
   },
   "scripts": {
