--- a/react-dashboard/package.json
+++ b/react-dashboard/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "2.1.8",
     "react-time-picker": "^3.5.1",
     "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
     "styled-components": "^4.2.0"
   },
   "scripts": {
