--- a/react-dashboard/package.json
+++ b/react-dashboard/package.json
@@ -16,6 +16,7 @@
     "react-time-picker": "^3.5.1",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.2.0"
   },
   "scripts": {
