--- a/react-dashboard/package.json
+++ b/react-dashboard/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "2.1.8",
+    "react-select": "^3.0.4",
     "react-time-picker": "^3.5.1",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
